# SCIA-CRF_XGBOOST_POS

./: .gitignore  LICENSE  README.md  llm_text_gen_.ipynb  pyproject.toml
experimentations/: data_analysis.ipynb  mlflow_crf.py  mlflow_xgboost.py
lacuna_ntealan_data/bbj/annotated/: final_pos_tags_ghomala_conlu.csv
lacuna_ntealan_data/bbj/src/: 2021-12-22_00:49:04.100355.csv
