[tool.poetry]
name = "scia-crf_xgboost_pos"
version = "0.1.0"
description = "Sangkak challenge session september 2023"
authors = ["Elvis MBONING <levismboning@ntealan.org>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
boto3 = "1.28.25"
botocore = "1.31.25"
click = "8.1.7"
databricks-cli = "0.17.8"
docker = "6.1.3"
fastjsonschema = "2.16.2"
Flask = "2.3.3"
GitPython = "3.1.37"
google-auth = "2.16.0"
google-auth-oauthlib = "0.4.6"
google-pasta = "0.2.0"
graphviz = "0.20.1"
greenlet = "2.0.2"
grpcio = "1.51.1"
gunicorn = "21.2.0"
Jinja2 = "3.1.2"
joblib = "1.2.0"
json5 = "0.9.11"
jsonpointer = "2.3"
jsonschema = "4.17.3"
lazypredict = "0.2.12"
libclang = "15.0.6.1"
llvmlite = "0.40.1"
Mako = "1.2.4"
Markdown = "3.4.1"
MarkupSafe = "2.1.2"
matplotlib = "3.6.3"
matplotlib-inline = "0.1.6"
mlflow = "2.7.1"
mlxtend = "0.22.0"
multiprocess = "0.70.15"
numba = "0.57.1"
numpy = "1.24.2"
oauthlib = "3.2.2"
pandas = "1.5.3"
pandocfilters = "1.5.0"
pickleshare = "0.7.5"
Pillow = "9.4.0"
platformdirs = "3.0.0"
prometheus-client = "0.16.0"
prompt-toolkit = "3.0.36"
protobuf = "3.19.6"
python-crfsuite = "0.9.9"
python-dateutil = "2.8.2"
python-json-logger = "2.0.7"
querystring-parser = "1.2.4"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
rsa = "4.9"
s3transfer = "0.6.1"
sagemaker = "2.177.0"
sanitize-ml-labels = "1.0.50"
schema = "0.7.5"
scikit-learn = "*"
scikit-plot = "0.3.7"
scipy = "*"
seaborn = "0.12.2"
sklearn-crfsuite = "*"
SQLAlchemy = "2.0.21"
sqlparse = "0.4.4"
summarytools = "0.2.3"
tabulate = "0.9.0"
tblib = "1.7.0"
termcolor = "2.2.0"
terminado = "0.17.1"
tornado = "6.2"
tqdm = "4.64.1"
webcolors = "1.12"
webencodings = "0.5.1"
websocket-client = "1.5.1"
Werkzeug = "2.3.7"
xgboost = ">1.7.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
